# Interactive-Application-for-Musical-Analysis

./: README.md  app.py  pyproject.toml
src/interactive_application_for_musical_analysis/: app_ops.py
